Scrolling must be done after the layout when doing full page zoom https://bugs.webkit.org/show_bug.cgi?id=225730

Reviewed by Simon Fraser.

Source/WebCore:

Previously, the actual scroll was executed before the layout with the zoomed position.
It sometimes makes the scroll position exceed the page height, and cannot retain pageYOffset.
In the user experience perspective, the user may miss what they are looking at after zoom.

This patch makes the scroll happen after the layout, with the zoomed position.

Test: LayoutTests\fast\scrolling\page-y-offset-should-not-be-changed-after-zoom.html

* page/Frame.cpp:
(WebCore::Frame::setPageAndTextZoomFactors): Makes the scroll happen after the layout.

Source/WebKit:

Add check to disallow negative or zero zoom value.

* UIProcess/API/C/WKPage.cpp:
(WKPageSetPageZoomFactor):

LayoutTests:

Added a testcase to ensure that scroll position is not changed after zoom.

* fast/scrolling/page-y-offset-should-not-be-changed-after-zoom-expected.txt: Added.
* fast/scrolling/page-y-offset-should-not-be-changed-after-zoom.html: Added.


Canonical link: https://commits.webkit.org/237936@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277775 268f45cc-cd09-0410-ab3c-d52691b4dbfc